<resources>
    <string name="app_name">Assignment</string>
    <string name="next">Next</string>
    <string name="film_and_animation">Film_and_Animation</string>
    <string name="cars_and_vehicles">Cars_and_Vehicles</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="comedy">Comedy</string>
    <string name="gaming">Gaming</string>
    <string name="entertainment">Entertainment</string>
    <string name="choose_your_interests">Choose your interests</string>
    <string name="get_your_personalized_video_creator_recommendations_please_select_at_least_5_category">Get your personalized video creator recommendations please select at least 5 category</string>
    <string name="hello">Hello!</string>
</resources>