<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="167dp"
            android:layout_height="80dp"
            android:text="@string/choose_your_interests"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:text="@string/get_your_personalized_video_creator_recommendations_please_select_at_least_5_category"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <Button
            android:id="@+id/button"
            android:layout_width="305dp"
            android:layout_height="47dp"
            android:background="@color/purple_200"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.881" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/film_and_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.319" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:text="@string/cars_and_vehicles"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.474" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/sports"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/gaming"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.632" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:text="@string/comedy"
            android:textStyle="bold"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.705" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/entertainment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.768" />

</android.support.constraint.ConstraintLayout>